# langnostic

./: .gitignore  Cached.hs  Crunch.hs  Dockerfile  Feed.hs  LICENSE  Langnostic.hs  Main.hs  Markup.hs  New.hs  Pages.hs  Post.hs  PostMap.hs  Posts.hs  README.md  Server.hs  blog-chronology.json  blog-chronology.lisp  cosmetics.lisp  docker-compose.yml  feeds.go  handlers.go  langnostic.asd  langnostic.base  langnostic.cabal  langnostic.lisp  main-site-enabled  main.go  model.go  model.lisp  new.go  new.py  package.lisp  posts.json  project.clj  push.sh  requirements.txt  util.lisp
ai-examples/: scratchpad-talk-notes.md
doc/: intro.md
drafts/: 2025-01-09--ai-safety-meetup.md  2025-02-06--tasm-meeting-notes.md  3d-printing-field-report.md  a-bit-more-work-on-cl-vote.md  aggregating-in-aggregate.md  ai-alignment-and-tts-presentation.md  ai-blog-reader-take-two.md  ai-development-assistant-quickie.md  ai-multipliers.md  aidev-revisions-pytrivialsql-and-bitching.md  an-interesting-question-part-two.md  an-interesting-question.md  android-poking.md  another-TAIS-meeting.md  another-for-the-drafts-folder.md  another-fresh-machine.md  ansible-and-house.md  ansible-house-and-receptiviti.md  antler--another-day.md  antler--day-01.md  antler--day-02.md  antler--day-03.md  antler--day-04.md  antler--day-08.md  antler--day-09.md  antler--elegy.md  antler--reflections-so-far.md  antler--yet-another-day-02.md  antler--yet-another-day.md  antler-day-06.md  arbitrary-update-0leinzFmDPg.md  arbitrary-update-5892.md  arbitrary-update-67892.md  arbitrary-update-9999.md  arxivore.md  (+123 more)
(+579 files in other folders)
