name:                langnostic

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            The personal blog of inaimathi
-- A longer description of the package.
-- description:
homepage:            https://github.com/Inaimathi/langnostic
license:             MIT
license-file:        LICENSE
author:              inaimathi
maintainer:          leo.zovic@gmail.com

-- A copyright notice.
-- copyright:

category:            Web
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  README.md

cabal-version:       >=1.10

executable langnostic
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9, Spock >=0.10 && <0.11, wai-middleware-static >=0.8 && <0.9, http-types >=0.9 && <0.10, mtl >=2.2 && <2.3, blaze-html >=0.8 && <0.9, text >=1.2 && <1.3, old-time >=1.1 && <1.2, containers >=0.5 && <0.6, transformers >=0.4 && <0.5, old-locale >=1.0 && <1.1, pandoc >=1.16 && <1.17, pandoc-types >=1.16 && <1.17, aeson >=0.10 && <0.11, bytestring >=0.10 && <0.11

  hs-source-dirs:      src
  default-language:    Haskell2010
